fixed changes part6